# candfans-client

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: python_publish.yml  unittest.yml
candfans/: client.py
candfans_client/: async_client.py  client.py  exceptions.py  model.py
candfans_client/models/: sales.py  search.py  timeline.py  user.py
tests/: test_asyncclient.py  test_client.py  utils.py
tests/data/: GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Fcontents%2Fget-popular-creator%3Fbetween%3DDAY%26page%3D1.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Fcontents%2Fget-popular-creator%3Fbetween%3DDAY%26page%3D2.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Fcontents%2Fget-timeline%3Fuser_id%3D9999%26post_type%5B%5D%3D0%26month%3D2024-01%26page%3D1.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Fcontents%2Fget-timeline%3Fuser_id%3D9999%26post_type%5B%5D%3D1%26month%3D2024-02%26page%3D1.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Fcontents%2Fget-timeline%3Fuser_id%3D9999%26post_type%5B%5D%3D1%26month%3D2024-02%26page%3D2.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Fcontents%2Fget-timeline-month%3Fuser_id%3D9999.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Forders%2Fget-sales%3Fmonth%3D2023-11.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Forders%2Fget-sales-backnumber%3Fmonth%3D2023-11.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Forders%2Fget-sales-chip%3Fmonth%3D2023-11.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Forders%2Fget-sales-history%3Fmonth%3D2023-11%26page%3D1.json  GET_https%3A%2F%2Fcandfans.jp%2Fapi%2Fuser%2Fget-follow%2F999%3Fpage%3D1.json  (+9 more)
