[tool.poetry]
name = "candfans-client"
version = "0.0.0"  # using poetry-dynamic-versioning
description = ""
authors = ["komanushi"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/komanushi/candfans-client"
repository = "https://github.com/komanushi/candfans-client"
keywords = ["API"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^2.5.3"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
